# narwhal

./: Cargo.toml  P2P_DEMO_README.md  P2P_REQUEST_RESPONSE_DEMO.md  REQUEST_RESPONSE_DEMO.md  REQ_RES_SUMMARY.md  WORKER_P2P_ARCHITECTURE.md  WORKER_P2P_INTEGRATION.md  WORKER_P2P_SUMMARY.md  build_and_run.sh  p2p_demo.sh  test_p2p_demo.sh
benchmark/datanarwhal_p2p_demo/node1/: IDENTITY  LOG
benchmark/datanarwhal_p2p_demo/node2/: IDENTITY  LOG
crypto/src/: lib.rs
network/src/: simple_sender.rs
node/: Cargo.toml
node/src/: main.rs
p2p/: Cargo.toml
p2p/src/: event_loop.rs  functions.rs  handlers.rs  lib.rs  quorum_waiter_p2p.rs  receiver.rs  req_res.rs  req_res_handler.rs  req_res_protocol.rs  sender.rs  state.rs  types.rs
primary/src/: core.rs
worker/: Cargo.toml
worker/src/: batch_maker.rs  quorum_waiter.rs  worker.rs
