[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.11"

dashmap = "5.5"
arc-swap = "1.6"
sha3 = "0.10.8"
# --- Thư viện được thêm vào để sửa lỗi ---
hex = "0.4"
toml = "0.8"

libp2p = { version = "0.53.2", features = [
    "tokio", "gossipsub", "mdns", "kad", "quic", "macros", "secp256k1",  "identify"
]}
network = { path = "../network" }
crypto = { path = "../crypto" }
